Stop propagating scroll-snap style from <body> to viewport https://bugs.webkit.org/show_bug.cgi?id=200643 <rdar://problem/54277211>

Reviewed by Simon Fraser.

Only the document element should be allowed to propagate to the viewport.

Test changes:
- iframe tests changes match https://commits.webkit.org/r269506 to reflect new behavior
- remove legacy tests for old behavior that is now unsupported

* LayoutTests/TestExpectations:
* LayoutTests/tiled-drawing/scrolling/scroll-snap/resources/horizontal-mainframe.html:
* LayoutTests/tiled-drawing/scrolling/scroll-snap/resources/vertical-mainframe.html:
* LayoutTests/tiled-drawing/scrolling/scroll-snap/scroll-snap-async-iframe.html:
* LayoutTests/tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-mainframe-horizontal-legacy-expected.txt: Removed.
* LayoutTests/tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-mainframe-horizontal-legacy.html: Removed.
* LayoutTests/tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-mainframe-vertical-legacy-expected.txt: Removed.
* LayoutTests/tiled-drawing/scrolling/scroll-snap/scroll-snap-mandatory-mainframe-vertical-legacy.html: Removed.
* LayoutTests/tiled-drawing/scrolling/scroll-snap/scroll-snap-proximity-mainframe-legacy-expected.txt: Removed.
* LayoutTests/tiled-drawing/scrolling/scroll-snap/scroll-snap-proximity-mainframe-legacy.html: Removed.
* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::updateSnapOffsets):

Canonical link: https://commits.webkit.org/253430@main